# manas-ee-tests

./: Cargo.toml  README.md
csv/: orderbook_prices.csv  uni_movement_high_liquidity.csv  uni_movement_low_liquidity.csv
src/: cryptowatch.rs  generate_graph.rs  kraken.rs  lib.rs  main.rs  uniswap_v2.rs
trade_info/: data.json  order_book_data.json  uni_movement.json  uni_movement_high_liquidity.json  uni_movement_low_liquidity.json
