[package]
name = "amm-orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "generate-graph"
path = "src/generate_graph.rs"


[dependencies]
anyhow = "1.0.75"
csv = "1.3.0"
dotenv = "0.15.0"
ethers = "2.0.10"
reqwest = "0.11.20"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
